--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html#features3-2">Oferta</a></li><li class="nav-item"><a class="nav-link link" href="index.html#slider3-5">Wideo</a></li><li class="nav-item"><a class="nav-link link" href="index.html#features3-2">Galeria</a></li><li class="nav-item"><a class="nav-link link" href="index.html#form1-7">Kontakt</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="https://mobirise.com/">POBIERZ ULOTKĘ</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html#features3-2">Oferta</a></li><li class="nav-item"><a class="nav-link link" href="index.html#slider3-5">Wideo</a></li><li class="nav-item"><a class="nav-link link" href="index.html#slider3-6">Galeria</a></li><li class="nav-item"><a class="nav-link link" href="index.html#form1-7">Kontakt</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="https://mobirise.com/">POBIERZ ULOTKĘ</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-0" data-rv-view="0">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-0" data-rv-view="0">
     <div>
         <div>
             <div>
@@ -650,7 +650,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Kontakt">
 
-                        <input type="hidden" value="URyD7x/44h/qkKXJBe64dSuthcDUbG0jUnrnoWrPCYeZ0HUMuQwS4dWJsl379GJwT/mk07uc+4xblg6kV7GX6ijG1QgaVRXw8YGvhHb1q43Gh1qjoVC5PBrL5L5b4hIo" data-form-email="true">
+                        <input type="hidden" value="ITcoE4kJHZFBuKkiJG4/Dn7NgR1c+DvCK+DDOcUmOtiWZRBHUZAe2z5JD2Dx9yTL3arjiwNPGVfb5gTi+j5q74+31gx5rxJd8eFr630Vv7votfvIHBVe4b0Zw5KmZ3wS" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
